--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "auth0-js": "^9.3.1",
     "axios": "^0.17.1",
     "bootstrap": "^4.0.0-alpha.6",
+    "browserify": "^16.1.1",
     "classnames": "^2.2.5",
     "html-webpack-plugin": "^2.30.1",
     "js-cookie": "^2.2.0",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
