--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.2.0",
     "react-history": "^0.18.2",
+    "react-moment": "^0.7.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
