--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "js-cookie": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "path": "^0.12.7",
+    "prop-types": "^15.6.1",
     "proxy": "http://localhost:3000/",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
@@ -25,6 +26,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "react-select": "^1.2.1",
+    "react-sort-component": "^1.3.0",
     "reactstrap": "^5.0.0-beta",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
